# hoi4save

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: country_tag.rs  date.rs  errors.rs  extraction.rs  file.rs  flavor.rs  lib.rs  melt.rs  models.rs
src/de/: hashmap_f64.rs  mod.rs
tests/: parse.rs  utils.rs
