[package]
name = "hoi4save"
version = "0.3.4"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
exclude = ["/assets/*", "/fuzz/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rakaly/hoi4save.git"
description = "Ergonomically work with HOI4 saves"
keywords = ["hoi4", "ironman"]
categories = ["parsing"]

[dependencies]
jomini = { version = "0.28.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
attohttpc = "0.26"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
rawzip = "0.3.1"

[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
