[package]
name = "hoi4save"
version = "0.4.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
exclude = ["/assets/*", "/fuzz/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rakaly/hoi4save.git"
description = "Ergonomically work with HOI4 saves"
keywords = ["hoi4", "ironman"]
categories = ["parsing"]

[dependencies]
jomini = { git = "https://github.com/rakaly/jomini.git", branch = "envelope", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
attohttpc = { version = "0.30", default-features = false, features = ["tls-native"] }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
rawzip = "0.4.0"

[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
